# CLEAR

./: .gitignore  README.md  main.py  pyproject.toml
agents/: LAB.md
dataset/: 300_test_set.pkl  isic_test_set.pkl  isic_train_set.pkl  test_metadata.csv  train_metadata.csv
eval_utils/: __init__.py  constants.py  data_processing.py  metrics.py  plotting.py
evaluation/: ablation_score.ipynb  baseline_score.ipynb  gemini.ipynb  gpt.ipynb  score_calculator.ipynb
evaluation/final_results/: gemini-baseline.csv  gpt-baseline.csv
experiments/: baseline_pipeline.ipynb  create_kb.ipynb  eval_runner.py  final-pipeline.py  llm_setup.py  retrieve_image.py  utils.py
experiments/ablation_study/: ablation_pipeline.py  gemini.ipynb  gpt.ipynb
results/ablation/: gemini.jsonl  gpt.jsonl
results/baseline/: gemini-baseline.jsonl  gpt-baseline.jsonl
