[project]
name = "clear-diagnosis"
version = "0.1.0"
description = "Critique-Led Explainable Agents with Image Retrieval for Grounded Skin-Lesion Diagnosis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "langchain-google-genai>=2.1.12",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "open-clip-torch>=3.1.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "qdrant-client>=1.15.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
